# PS5-Camera-Firmware-Loader

./: .gitignore  100-playstation-camera.rules  CMakeLists.txt  README.md  TODO  main.cpp  transferrer.cpp  transferrer.h
.github/: FUNDING.yml  ISSUE_TEMPLATE
.github/workflows/: codeql-analysis.yml  main.yml
cpp/: CMakeLists.txt  build.ninja  log.txt  main.cpp  transferrer.hpp
docs/: lsusb-output.md
rust/: Cargo.toml  main
rust/src/: main.rs
src/: transferrer.hpp
web/: index.html  index.html.bak
